--- a/config/module_humandetector.cfg
+++ b/config/module_humandetector.cfg
@@ -30,41 +30,41 @@ TacticsPoliceForce.CommandExecutorScout : adf.sample.centralized.CommandExecutor
 
 
 SampleBuildingDetector.Clustering : matlab.module.algorithm.MATLABKMeans
-SampleRoadDetector.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+SampleRoadDetector.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 SampleHumanDetector.Clustering : matlab.module.algorithm.MATLABKMeans
 
-SampleSearch.PathPlanning.Ambulance : matlab.module.algorithm.MATLABshortestPathPlanning
+SampleSearch.PathPlanning.Ambulance : adf.sample.module.algorithm.SamplePathPlanning
 SampleSearch.Clustering.Ambulance : matlab.module.algorithm.MATLABKMeans
-SampleSearch.PathPlanning.Fire : matlab.module.algorithm.MATLABshortestPathPlanning
+SampleSearch.PathPlanning.Fire : adf.sample.module.algorithm.SamplePathPlanning
 SampleSearch.Clustering.Fire : matlab.module.algorithm.MATLABKMeans
-SampleSearch.PathPlanning.Police : matlab.module.algorithm.MATLABshortestPathPlanning
+SampleSearch.PathPlanning.Police : adf.sample.module.algorithm.SamplePathPlanning
 SampleSearch.Clustering.Police : matlab.module.algorithm.MATLABKMeans
 
 
-ActionExtClear.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
-ActionExtMove.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
-ActionFireFighting.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
-ActionTransport.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+ActionExtClear.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
+ActionExtMove.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
+ActionFireFighting.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
+ActionTransport.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 
 
-CommandExecutorAmbulance.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+CommandExecutorAmbulance.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 
 CommandExecutorAmbulance.ActionTransport : adf.sample.extaction.ActionTransport
 CommandExecutorAmbulance.ActionExtMove : adf.sample.extaction.ActionExtMove
 
-CommandExecutorFire.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+CommandExecutorFire.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 
 CommandExecutorFire.ActionFireFighting : adf.sample.extaction.ActionFireFighting
 CommandExecutorFire.ActionExtMove : adf.sample.extaction.ActionExtMove
 
-CommandExecutorPolice.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+CommandExecutorPolice.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 
 CommandExecutorPolice.ActionExtClear : adf.sample.extaction.ActionExtClear
 CommandExecutorPolice.ActionExtMove : adf.sample.extaction.ActionExtMove
 
-CommandExecutorScout.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+CommandExecutorScout.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 
-CommandExecutorScoutPolice.PathPlanning : matlab.module.algorithm.MATLABshortestPathPlanning
+CommandExecutorScoutPolice.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
 CommandExecutorScoutPolice.ActionExtClear : adf.sample.extaction.ActionExtClear
 
 TacticsAmbulanceCentre.TargetAllocator : adf.sample.module.complex.SampleAmbulanceTargetAllocator
