--- a/config/module_humandetector.cfg
+++ b/config/module_humandetector.cfg
@@ -29,16 +29,16 @@ TacticsPoliceForce.CommandExecutorPolice : adf.sample.centralized.CommandExecuto
 TacticsPoliceForce.CommandExecutorScout : adf.sample.centralized.CommandExecutorScoutPolice
 
 
-SampleBuildingDetector.Clustering : matlab.module.algorithm.MATLABKMeans
+SampleBuildingDetector.Clustering : adf.sample.module.algorithm.SampleKMeans
 SampleRoadDetector.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
-SampleHumanDetector.Clustering : matlab.module.algorithm.MATLABKMeans
+SampleHumanDetector.Clustering : adf.sample.module.algorithm.SampleKMeans
 
 SampleSearch.PathPlanning.Ambulance : adf.sample.module.algorithm.SamplePathPlanning
-SampleSearch.Clustering.Ambulance : matlab.module.algorithm.MATLABKMeans
+SampleSearch.Clustering.Ambulance : adf.sample.module.algorithm.SampleKMeans
 SampleSearch.PathPlanning.Fire : adf.sample.module.algorithm.SamplePathPlanning
-SampleSearch.Clustering.Fire : matlab.module.algorithm.MATLABKMeans
+SampleSearch.Clustering.Fire : adf.sample.module.algorithm.SampleKMeans
 SampleSearch.PathPlanning.Police : adf.sample.module.algorithm.SamplePathPlanning
-SampleSearch.Clustering.Police : matlab.module.algorithm.MATLABKMeans
+SampleSearch.Clustering.Police : adf.sample.module.algorithm.SampleKMeans
 
 
 ActionExtClear.PathPlanning : adf.sample.module.algorithm.SamplePathPlanning
